--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,37 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    padding: 0;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+        Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    /* background-color: #222; */
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+    color: inherit;
+    text-decoration: none;
 }
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
+    transition: 0.3s;
 }
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+.banner-blend-orange::after {
+    background: linear-gradient(
+        45deg,
+        rgb(255, 255, 255),
+        #f60,
+        rgb(255, 0, 225)
+    );
+    inset: 0;
+    position: absolute;
+    z-index: 30;
+    content: "";
+    mix-blend-mode: multiply;
+}
+.wd {
+    max-width: 1200px;
 }
